(WeatherRepository.java): add required junit test case