@@ -3,6 +3,7 @@ package com.interview.siemensgreeting.repository;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.SerializationFeature;
 import com.interview.siemensgreeting.dto.Temperature;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Repository;
 
 import java.nio.file.Files;
@@ -14,23 +15,23 @@ import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
-@Repository
-public class WeatherRepository {
-    Map<String, Temperature> weatherDetails = new HashMap<>();
+import static java.nio.file.Files.walk;
 
+@Repository
+@Slf4j
+public class WeatherRepository {
+    private final Map<String, Temperature> weatherDetails = new HashMap<>();
 
     public WeatherRepository() {
         // create Object Mapper
         ObjectMapper mapper = new ObjectMapper().findAndRegisterModules()
                 .disable(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS);
-        ;
-        String dir = System.getProperty("user.dir") + "/src/main/resources/data/weather";
-
         try {
-            List<Path> paths = Files.walk(Paths.get(dir), 1) //by mentioning max depth as 1 it will only traverse immediate level
+            String dir = System.getProperty("user.dir") + "/src/main/resources/data/weather";
+            List<Path> paths = walk(Paths.get(dir), 1) //by mentioning max depth as 1 it will only traverse immediate level
                     .filter(Files::isRegularFile)
                     .filter(path -> path.getFileName().toString().endsWith(".json")) // fetch only the files which are ending with .JSON
-                    .collect(Collectors.toList());
+                    .toList();
             for (Path path : paths) {
                 //read the Json File . change here according to your logic
                 String json = new String(Files.readAllBytes(path));
@@ -40,7 +41,7 @@ public class WeatherRepository {
             }
             System.out.println(weatherDetails.toString());
         } catch (Exception e) {
-            e.printStackTrace();
+            log.error("Invalid Input Path defined. Unable to load Temperature Data",e);
         }
     }
 
